--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,51 +1,48 @@
----
-
 name: "Github Action Workflow"
-
 
 on:
   push:
     branches:
-      -master
-      -testing
+      - master
+      - testing
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: "Running Date Command"
-         run: date
-         shell: bash
+      - name: "Running date command"
+        run: date
+        shell: bash
 
-      - name: "Getting OS Details"
-          run: cat /etc/os-release
-          shell: bash
+      - name: "Getting os details"
+        run: cat /etc/os-release
+        shell: bash
 
-      - name:"Uset Details"
-           run:whoami
-           shell: bash
+      - name: "user details"
+        run: whoami
+        shell: bash
 
-      - name:"Current Working Directory"
-          run: |
-               pwd
-               ls -al
+      - name: "Current working directory details before checkout"
+        run: |
+          pwd
+          ls -al
 
-      - name: "Checck out repo"
-          uses: actions/checkout@v3
+      - name: "Checkout Repository"
+        uses: actions/checkout@v3
 
       - name: "Current working directory after checkout"
-          run: |
-               pwd
-               ls -al
+        run: |
+          pwd
+          ls -al
 
-      - name: "Installing terraform"
-          run: |
-               wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
-               unzip terraform_1.6.6_linux_amd64.zip
-               ./terraform version
-               ls -al
+      - name: "Terraform installation"
+        run: |
+          wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
+          unzip terraform_1.6.6_linux_amd64.zip
+          ./terraform version
+          ls -al
 
-      - name : "Running script.sh"
-            run: |
-                 chmod +x script.sh
-                 ./script.sh
+      - name: "Running script.sh"
+        run: |
+          chmod +x script.sh
+          ./script.sh
